# fahad-hackthontwo-phase-4

./: .gitignore  QWEN.md  README.md  tasks-summary.md  validate_implementation.py
.claude/: settings.local.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_sessions_table.py  003_create_verification_tokens_table.py  004_create_todos_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  todos.py
backend/app/core/: auth.py  security.py
backend/app/models/: __init__.py  todo.py  user.py
backend/app/schemas/: auth.py  todo.py
backend/scripts/: start.sh
backend/src/: auth.py  config.py  main.py  schemas.py  utils.py
backend/src/agents/: todo_agent.py
backend/src/api/: __init__.py  chat.py  health.py  metrics.py  middleware.py  todo.py
backend/src/core/: auth.py  config.py  database.py  logger.py  middleware.py
backend/src/database/: __init__.py
backend/src/mcp/: tools.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  todo.py  user.py
backend/src/nlp/: processor.py
backend/src/services/: chat_service.py  conversation_service.py  task_service.py  todo_service.py
backend/src/utils/: chat_parser.py
backend/tests/: conftest.py  test_auth_login.py  test_auth_signup.py  test_backend.py  test_security.py  test_todos.py
docs/: ai-operations-guide.md
frontend/: .env.local.example  .eslintrc.json  README.md  middleware.ts  (+4 more)
(+149 files in other folders)
